# 2025MobileDefectDetection

Upper-levelControlSoftwareLayer/: .gitignore  AIDefectAnalyzer.h  AboutPage.qml  CMakeLists.txt  ChartDataManager.cpp  ChartDataManager.h  ChartsPage.qml  CustomTitleBar.qml  DataPage.qml  HelpPage.qml  LineChart.qml  LoginPage.qml  MainPage.qml  RtspPlayer.qml  TcpServer.cpp  TcpServer.h  TopToolBar.qml  UdpServer.cpp  UdpServer.h  loginmanager.cpp  loginmanager.h  main.cpp  main.qml  src.qrc
fromTheChip/: AppearanceFilter.cc  AppearanceFilter.h  CMakeLists.txt  GeometricVerifier.cc  GeometricVerifier.h  MultiLayerFilter.cc  MultiLayerFilter.h  ORBExtractor.cc  ORBExtractor.h  ObjectDatabase.cc  ObjectDatabase.h  SpatialFilter.cc  SpatialFilter.h  TemporalFilter.cc  TemporalFilter.h  ai_base.cc  feature_processor.cc  feature_processor.h  main.cc  network_comm.cc  network_comm.h  pipeline.h  rt_wait.h  superpoint.cc  superpoint.h  uart_transfer.cc  utils.h  wifi.cc  wifi.h  wifi_conn.c  wifi_conn.h  yolo_compress.cc  yolo_compress.h  yolov8.cc
masterChip/: CMakeLists.txt  Sift.cc  Sift.h  SimpleKalmanFilter.h  TemporalFilter.cc  TemporalFilter.h  ai_base.h  main.cc  pipeline.cc  uart_transfer.cc  uart_transfer.h  yolov8.cc  yolov8.h
